# Legacy-BecomeFumoCam

./: .gitignore  INSTRUCTIONS.md  README.md  check_active.py  globals.py  injector.py  main.py  pyproject.toml  requirements.txt  setup.cfg  spawn_detection.py  temps.py
.github/workflows/: ci.yml  codeql-analysis.yml
poetry_scripts/: __init__.py  run_audit.py
resources/: README.md  Windows Startup Folder.lnk  main.bat  pull latest.bat  pull_latest.bat  start_censor.bat  start_main.bat  windows_block_updates.bat  windows_fumocam_startup.bat
resources/arduino/: README.md  arduino.ino
resources/hud/: README.md  animations.css  changelog.js  hud.html  main.css  old_styles.css  script.js
resources/injector/: README.md
resources/lua_scripts/: goto_player.lua  spectate.lua  teleport.lua  test_adjust_gravity.lua  test_goto_player_silent.lua  test_print_full_pos.lua  test_print_pos.lua  test_print_target_pos.lua  test_spectate_player.lua
src/: .env.default  actions.py  arduino_integration.py  chat_ocr.py  chat_whitelist.py  commands.py  config.py  crash_check.py  health.py  hud.py  hw_stats.py  initialize_serial.py  injector.py  main.py  navpoints.py  obs_monitor.py  spawn_detection.py  temps.py  tests.py  twitch_integration.py  utilities.py
