[tool.poetry]
name = "fumocam"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
# Allow reading .env file
python-dotenv = "^0.19.2"
# Twitch communication wrapper
twitchio = "^2.1.3"
# Game API Queries
requests = "^2.26.0"
# Game launcher
selenium = "^4.1.0"
# Temperature Monitoring
psutil = "^5.8.0"
pythonnet = {path = "resources/pythonnet/pythonnet-3.0.0.dev1-py3-none-any.whl"}
# Hardware-Driven Input Emulation (Arduino)
pyserial = "^3.5"
# Software-Driven Input Emulation
PyAutoGUI = "^0.9.53"
PyDirectInput = "^1.0.4"
PyGetWindow = "^0.0.9"
# Computer Vision
mss = "^6.1.0"
opencv-python = "^4.5.4"
pytesseract = "^0.3.8"
imutils = "^0.5.4"
# Dependency security patches
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
bandit = "^1.7.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
liccheck = "^0.6.4"
mypy = "^0.910"
ossaudit = "^0.5.0"
types-psutil = "^5.8.15"
types-requests = "^2.26.1"
types-selenium = "^3.141.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths=["src"]
profile = "black"


[tool.mypy]
python_version = "3.9"

[[tool.mypy.overrides]]
module = ["pytesseract.*", "mss.*", "pyautogui.*", "pydirectinput.*", "pygetwindow.*", "serial.*", "cv2.*", "imutils.*", "twitchio.*", "clr.*"]
ignore_missing_imports = true
